--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Articles</h1>
 Our blog has <%= Article.public_count%> articles and counting!
-
+<p id="notice" ><%=notice%></p>
 <ul>
   <% @articles.each do |article| %>
   <% unless article.archived? %>
