--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,14 +12,22 @@
 <tr>
 
 <td><%=link_to article.title,article%></td>
-<td><%=current_user.email%></td>
+<td><% unless article.user_id == nil %>
+<%= article.user.email %>
+<%end%>
+</td>
 <td><ul>
+ <% if article.user_id == current_user.id %>
  <li><%=link_to "Edit Article", edit_article_path(article.id)%></li> 
  <li><%=link_to "Show Article", article_path(article.id)%></li>
  <li><%= link_to "Delete Article", article_path(article.id), data: {
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
                   } %></li>
+<%else%>
+ 
+ <li><%=link_to "Show Article", article_path(article.id)%></li>
+ <%end%>
 </ul></td>
 <%end%>
 </tr>
