--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,11 +3,17 @@
 <p><%= @article.body %></p>
 
 <ul>
+ <% if @article.user_id == current_user.id %>
+
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
   <li><%= link_to "Destroy", article_path(@article), data: {
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
                   } %></li>
+  <%end%>
+  
+  
+   
 </ul>
 
 <h2>Comments</h2>
