--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,17 @@
  *= require_tree .
  *= require_self
  */
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+.custom-link {
+    text-decoration: none;
+    cursor: pointer;
+  }
+.text-link{
+    color:#E0115F	;
+}
+  
