--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,42 @@
+<div class="m-2 p-2">
+
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signup" }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form-group row mb-2">
+    <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
+    <div class="col-sm-4">
+      <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", placeholder: "Enter your email" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form-group row mb-2">
+    <%= f.label :password, class: "col-sm-2 col-form-label text-right" %>
+    <div class="col-sm-4">
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, class: "form-control", autocomplete: "new-password", placeholder: "Enter your password" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group row mb-2">
+    <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
+    <div class="col-sm-4">
+      <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", placeholder: "Enter your password for confirmation" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group row mb-2">
+    <div class="col-sm-4 offset-sm-2">
+      <%= f.submit "Sign up", class: "btn btn-danger" %>
+    </div>
   </div>
 <% end %>
 
+<div class="form-group row mb-2">
 <%= render "devise/shared/links" %>
+</div>
+</div>
