--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,36 @@
 <%= form_with model: article do |form| %>
+  <div class="container">
+    <div class="form-group row mt-3">
+      <%= form.label :title, class: "col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= form.text_field :title, class: "form-control", placeholder: "Title of your blog" %>
+        <% article.errors.full_messages_for(:title).each do |message| %>
+          <div class="invalid-feedback d-block"><%= message %></div>
+        <% end %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-    <% article.errors.full_messages_for(:title).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
+    <div class="form-group row mt-3">
+      <%= form.label :body, class: "col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= form.text_area :body, class: "form-control", placeholder: "You can write your blog here" %>
+        <% article.errors.full_messages_for(:body).each do |message| %>
+          <div class="invalid-feedback d-block"><%= message %></div>
+        <% end %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %><br>
-    <% article.errors.full_messages_for(:body).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-<div>
-  <%= form.label :status %><br>
-  <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %>
-</div>
+    <div class="form-group row mt-3">
+      <%= form.label :status, class: "col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= form.select :status, Visible::VALID_STATUSES, { selected: article.status || 'public' }, class: "form-control" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.submit %>
+    <div class="form-group row mt-3">
+      <div class="col-sm-10 offset-sm-2">
+        <%= form.submit %>
+      </div>
+    </div>
   </div>
 <% end %>
