--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,19 +1,30 @@
-<%= form_with model: [ @article, @article.comments.build ] do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-  <p>
-  <%= form.label :status %><br>
-  <%= form.select :status, Visible::VALID_STATUSES, selected: 'public' %>
-</p>
+<%= form_with model: [@article, @article.comments.build], local: true do |form| %>
+  <div class="container">
+    <div class="form-group row mt-3">
+      <%= form.label :commenter, class: "col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= form.text_field :commenter, class: "form-control" %>
+      </div>
+    </div>
 
+    <div class="form-group row mt-3">
+      <%= form.label :body, class: "col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= form.text_area :body, class: "form-control" %>
+      </div>
+    </div>
 
-    <%= form.submit %>
-  </p>
+    <div class="form-group row mt-3">
+      <%= form.label :status, class: "col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= form.select :status, Visible::VALID_STATUSES, selected: 'public', class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <div class="col-sm-10 offset-sm-2">
+        <%= form.submit "Submit", class: "btn btn-primary" %>
+      </div>
+    </div>
+  </div>
 <% end %>
