added cancan gem , made some changes in ability

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,6 +10,11 @@
   </div>
 
   <div>
+    
+  <%= time_ago_in_words(comment.created_at) %> ago 
+  </div>
+
+  <div>
     <%= link_to "Destroy Comment", [comment.article, comment],class:"custom-link", data: {
                   turbo_method: :delete,
                   turbo_confirm: "Are you sure?"
