--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,7 +29,7 @@
 
     <div class="form-group row mt-3">
       <div class="col-sm-10 offset-sm-2">
-        <%= form.submit %>
+        <%= form.submit "submit" ,class:"btn btn-primary" %>
       </div>
     </div>
   </div>
