--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,33 +1,39 @@
 <% if user_signed_in? %>
 
   <div class="container">
-    <h3>Welcome Home, <%= current_user.email %></h3>
+    <%
+=begin%>
+ <h3>Welcome Home, <%= current_user.check_prefix%><%=current_user.name%></h3> 
+<%
+=end%>
+     <h3>Welcome Home,<%= current_user.email%></h3> 
     <p>Our blog has <%= Article.public_count %> articles and counting!</p>
 
     <table class="table table-bordered table-striped text-center">
       <thead>
         <tr>
           <th>Article name</th>
-          <th>Created by</th>
+          
           <th>Access rights</th>
+          <th>Created at</th>
         </tr>
       </thead>
       <tbody>
         <% @articles.each do |article| %>
           <tr>
             <td><%= link_to article.title, article ,class:"custom-link text-blue"%></td>
-            <td><%= article.user&.email %></td>
+            
             <td>
               <ul class="list-inline">
-                <% if article.user_id == current_user.id %>
+                
                   <li class="list-inline-item"><%= link_to "Edit Article", edit_article_path(article.id), class: "btn btn-warning m-1" %></li> 
                   <li class="list-inline-item"><%= link_to "Show Article", article_path(article.id), class: "btn btn-primary m-1" %></li>
                   <li class="list-inline-item"><%= link_to "Delete Article", article_path(article.id), class: "btn btn-danger m-1", data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></li>
-                <% else %>
-                  <li class="list-inline-item"><%= link_to "Show Article", article_path(article.id), class: "btn btn-primary m-1" %></li>
-                <% end %>
+             
+               
               </ul>
             </td>
+            <td><%= article.created_at.strftime("%m/%d/%Y") %></td>
           </tr>
         <% end %>
       </tbody>
