--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,9 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signup" }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
+      
+
+        </div>
         <div class="form-group row mb-2">
           <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
           <div class="col-sm-10">
@@ -23,7 +26,9 @@
           </div>
         </div>
 
-        <div class="form-group row mb-2">
+       
+
+         <div class="form-group row mb-2">
           <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
           <div class="col-sm-10">
             <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", placeholder: "Enter your password for confirmation" %>
@@ -35,7 +40,7 @@
             <%= f.submit "Sign up", class: "btn btn-danger" %>
           </div>
         </div>
-      <% end %>
+      
 
       <div class="form-group row mb-2">
         <%= render "devise/shared/links" %>
