--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,14 +6,14 @@
  <h3>Welcome Home, <%= current_user.check_prefix%><%=current_user.name%></h3> 
 <%
 =end%>
-     <h3>Welcome Home,<%= current_user.email%></h3> 
-    <p>Our blog has <%= Article.public_count %> articles and counting!</p>
+     <h3 class="m-3">Welcome Home,<%= check_prefix(current_user)%><%=current_user.name%></h3> 
+    <p class="m-3">Our blog has <%= Article.public_count %> articles and counting!</p>
 
     <table class="table table-bordered table-striped text-center">
       <thead>
         <tr>
           <th>Article name</th>
-          
+          <th>Created by</th>
           <th>Access rights</th>
           <th>Created at</th>
         </tr>
@@ -22,15 +22,14 @@
         <% @articles.each do |article| %>
           <tr>
             <td><%= link_to article.title, article ,class:"custom-link text-blue"%></td>
-            
+            <td><%=article.user.name%></td>
             <td>
               <ul class="list-inline">
-                
+              
                   <li class="list-inline-item"><%= link_to "Edit Article", edit_article_path(article.id), class: "btn btn-warning m-1" %></li> 
                   <li class="list-inline-item"><%= link_to "Show Article", article_path(article.id), class: "btn btn-primary m-1" %></li>
                   <li class="list-inline-item"><%= link_to "Delete Article", article_path(article.id), class: "btn btn-danger m-1", data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></li>
-             
-               
+              
               </ul>
             </td>
             <td><%= article.created_at.strftime("%m/%d/%Y") %></td>
