--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-primary text-center">KR Authentication System</h1>
 
-<div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
+<div class="container-fluid vh-100 d-flex justify-content-center ">
   <div class="m-2 p-2">
     <h2 class="text-center">Sign up</h2>
 
