--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,13 @@
   
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <%= link_to "Home", articles_path, class:"custom-link text-white m-2"%>
+    <ul class="navbar-nav m-2">
+      <li class="nav-item active p-2 ">
+        <%= link_to "Home", articles_path, class:"custom-link text-white "%>
       </li>
-      
+        <li class="nav-item p-2">
+         <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: "custom-link text-white " %>
+      </li>
     </ul>
     
   </div>
