--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,26 +8,10 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group row m-2">
-        <%= f.label :name, class: "col-sm-2 col-form-label text-right" %>
-        <div class="col-sm-10">
-          <%= f.text_field :name, class: "form-control", autofocus: true, autocomplete: "name", placeholder: "Enter your name" %>
-        </div>
-      </div>
-
-      <div class="form-group row m-2">    
-        <%= f.label :gender, class: "col-sm-2 col-form-label text-right" %>
-        <div class="col-sm-10">
-          <span class="option">Male</span>
-          <%= f.radio_button :gender, "m" %>
-          <span class="option">Female</span>
-          <%= f.radio_button :gender, "f" %>
-        </div>
-      </div>
-
-      <div class="form-group row m-2">
         <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
         <div class="col-sm-10">
-          <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", placeholder: "Enter your email" %>
+          <%= f.email_field :email, id: "email", class: "form-control", autofocus: true, autocomplete: "email", placeholder: "Enter your email" %>
+          <span id="email-error" class="error-message"></span> <!-- Error message for email -->
         </div>
       </div>
 
@@ -37,7 +21,8 @@
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
-          <%= f.password_field :password, class: "form-control", autocomplete: "new-password", placeholder: "Enter your password" %>
+          <%= f.password_field :password, id: 'password', class: "form-control", autocomplete: "new-password", placeholder: "Enter your password" %>
+          <span id="password-error" class="error-message"></span> <!-- Error message for password -->
         </div>
       </div>
 
