--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,14 +25,15 @@
           <span id="password-error" class="error-message"></span> <!-- Error message for password -->
         </div>
       </div>
-
+      
       <div class="form-group row m-2">
-        <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
+        <%= f.label "Profile Photo", class: "col-sm-2 col-form-label text-right" %>
         <div class="col-sm-10">
-          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", placeholder: "Enter your password for confirmation" %>
+          <%= f.file_field :avatar, id: "avatar", class: "form-control", autofocus: true %>
         </div>
       </div>
 
+      
       <div class="form-group row m-2">
         <div class="col-sm-10 offset-sm-2">
           <%= f.submit "Sign up", class: "btn btn-danger" %>
