--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,23 +17,30 @@
     <div class="m-0 p-0">
     <%if user_signed_in? %>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <%= link_to "WeWrite", articles_path, class:"custom-link text-white m-2"%>
-  
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <%= link_to "WeWrite", articles_path, class: "custom-link text-white m-2" %>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav m-2">
-      <li class="nav-item active p-2 ">
-        <%= link_to "Home", articles_path, class:"custom-link text-white "%>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active p-2">
+        <%= link_to "Home", articles_path, class: "custom-link text-white" %>
       </li>
-        <li class="nav-item p-2">
-         <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: "custom-link text-white " %>
-      </li>
-      
     </ul>
-    
+
+    <ul class="navbar-nav ml-auto">
+      <% if current_user.avatar.attached? %>
+        <li class="nav-item p-2">
+          <%= image_tag url_for(current_user.avatar), class: "rounded-circle", width: "40", height: "40" %>
+        </li>
+      <% end %>
+
+      <li class="nav-item p-2">
+        <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: "custom-link text-white" %>
+      </li>
+    </ul>
   </div>
 </nav>
+
 <%end%>
     <%if notice %>
       <p id="notice" class="alert alert-info m-3"><%= notice %></p>
