added fields of gender, name ,phone number to the form, mail is now being sent after signup

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -8,7 +8,8 @@
     <p>
       Welcome to Reddoorz<br>
     </p>
-    
+    <%= image_tag attachments['holi.jpeg'].url, alt: 'My Photo', class: 'photos' %>
+
     <p>Thanks for joining and have a great day! This is 20 March 2024 , I hope you had fun at the HOLI PARTY</p>
   </body>
 </html>
