--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-primary text-center">KR Authentication System</h1>
 
-<div class="container-fluid vh-100 d-flex justify-content-center ">
+<div class="container-fluid vh-100 d-flex justify-content-center">
   <div class="m-2 p-2">
     <h2 class="text-center">Sign up</h2>
 
@@ -8,14 +8,45 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group row m-2">
+        <%= f.label :name, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.text_field :name, id: "name", class: "form-control", autofocus: true, autocomplete: "name", placeholder: "Enter your name" %>
+          <span id="name-error" class="error-message"></span> <!-- Error message for name -->
+        </div>
+      </div>
+
+      <div class="form-group row m-2">
         <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
         <div class="col-sm-10">
-          <%= f.email_field :email, id: "email", class: "form-control", autofocus: true, autocomplete: "email", placeholder: "Enter your email" %>
+          <%= f.email_field :email, id: "email", class: "form-control", autocomplete: "email", placeholder: "Enter your email" %>
           <span id="email-error" class="error-message"></span> <!-- Error message for email -->
         </div>
       </div>
 
       <div class="form-group row m-2">
+        <%= f.label :gender, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.select :gender, [['Male', 'male'], ['Female', 'female']], {}, class: "form-control" %>
+          <span id="gender-error" class="error-message"></span> <!-- Error message for gender -->
+        </div>
+      </div>
+
+      <div class="form-group row m-2">
+        <%= f.label :phone_number, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.text_field :phone_number, id: "phone_number", class: "form-control", autocomplete: "phone_number", placeholder: "Enter your phone number" %>
+          <span id="phone_number-error" class="error-message"></span> <!-- Error message for phone number -->
+        </div>
+      </div>
+
+      <div class="form-group row m-2">
+        <%= f.label "Profile Photo", class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.file_field :avatar, id: "avatar", class: "form-control" %>
+          <span id="avatar-error" class="error-message"></span> <!-- Error message for avatar -->
+        </div>
+      </div>
+       <div class="form-group row m-2">
         <%= f.label :password, class: "col-sm-2 col-form-label text-right" %>
         <div class="col-sm-10">
           <% if @minimum_password_length %>
@@ -25,15 +56,15 @@
           <span id="password-error" class="error-message"></span> <!-- Error message for password -->
         </div>
       </div>
-      
+
       <div class="form-group row m-2">
-        <%= f.label "Profile Photo", class: "col-sm-2 col-form-label text-right" %>
+        <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
         <div class="col-sm-10">
-          <%= f.file_field :avatar, id: "avatar", class: "form-control", autofocus: true %>
+        
+          <%= f.password_field :password_confirmation, id: 'password', class: "form-control", autocomplete: "new-password", placeholder: "Confirm password" %>
+          <span id="password-error" class="error-message"></span> <!-- Error message for password -->
         </div>
       </div>
-
-      
       <div class="form-group row m-2">
         <div class="col-sm-10 offset-sm-2">
           <%= f.submit "Sign up", class: "btn btn-danger" %>
