--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,54 +1,54 @@
-  <!DOCTYPE html>
-  <html>
-  <head>
-    <title>Blog</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-   
-    </head>
-   <body>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Blog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
+<body>
 
+<div class="m-0 p-0">
+  <% if user_signed_in? %>
 
-     
-    <div class="m-0 p-0">
-    <%if user_signed_in? %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <%= link_to "WeWrite", articles_path, class: "custom-link text-white m-2" %>
 
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <%= link_to "WeWrite", articles_path, class: "custom-link text-white m-2" %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active p-2">
+            <%= link_to "Home", articles_path, class: "custom-link text-white" %>
+          </li>
+        </ul>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active p-2">
-        <%= link_to "Home", articles_path, class: "custom-link text-white" %>
-      </li>
-    </ul>
+        <ul class="navbar-nav ml-auto">
+          <% if current_user.avatar.attached? %>
+            <li class="nav-item p-2">
+            <%= image_tag current_user.avatar, class: "avatar", style: "width: 40px; height: 40px;" %>
+          <% end %>
 
-    <ul class="navbar-nav ml-auto">
-      <% if current_user.avatar.attached? %>
-        <li class="nav-item p-2">
-          <%= image_tag url_for(current_user.avatar), class: "rounded-circle", width: "40", height: "40" %>
-        </li>
-      <% end %>
+          <li class="nav-item p-2">
+            <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: "custom-link text-white" %>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-      <li class="nav-item p-2">
-        <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: "custom-link text-white" %>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <% end %>
 
-<%end%>
-    <%if notice %>
-      <p id="notice" class="alert alert-info m-3"><%= notice %></p>
-      <%end %>
-    <%if  alert%>
-      <p id="alert" class="alert alert-danger m-3"><%= alert %></p>
-      <%end %>
-      <%= yield %>
-    </div>
-  </body>
+  <% if notice %>
+    <p id="notice" class="alert alert-info m-3"><%= notice %></p>
+  <% end %>
+
+  <% if alert %>
+    <p id="alert" class="alert alert-danger m-3"><%= alert %></p>
+  <% end %>
+
+  <%= yield %>
+</div>
+
+</body>
 </html>
