--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,56 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h1 class="text-primary text-center">KR Authentication System</h1>
+<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="container-fluid vh-100 d-flex justify-content-center">
+  <div class="m-2 p-2">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="form-group row m-2">
+        <%= f.label :name, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.text_field :name, id: "name", autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
+        <span id="name-error" class="error-message"></span>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="form-group row m-2">
+        <%= f.label :phone_number, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.text_field :phone_number, id: "phone_number", autocomplete: "tel", class: "form-control" %>
+        </div>
+        <span id="phone_number-error" class="error-message"></span>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="form-group row m-2">
+        <%= f.label :password, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+         <i>(leave blank if you don't want to change it)</i>
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        </div>
+      
+      </div>
+
+      <div class="form-group row m-2">
+        <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
+        <div class="col-sm-10">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group row m-2">
+        <%= f.label :current_password, class: "col-sm-2 col-form-label text-right" %> 
+        <div class="col-sm-10">
+        <i>(we need your current password to confirm your changes)</i>
+          <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group row m-2">
+      <div class="col-sm-10 offset-sm-2">
+        <%= f.submit "Update", class: "btn btn-danger" %>
+      </div>
+      </div>
     <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
