--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,10 @@
             <%= image_tag current_user.avatar, class: "avatar", style: "width: 40px; height: 40px;" %>
           <% end %>
 
+        <li class="nav-item p-2">
+            <%= link_to 'Edit Profile',edit_user_registration_path, class:"custom-link text-white" %>
+          </li>
+
           <li class="nav-item p-2">
             <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: "custom-link text-white" %>
           </li>
